k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: image-resizer-svc
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: image-resizer-app
