k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: image-resizer.app
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: image-resizer-svc
              servicePort: 80
